sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:12: error: '<-' expected but ')' found.
	for(i<-getNombreValeurs()-2 to 0;i-=1){
                                             ^AlgCocktailSort1:18: error: illegal start of simple expression
}while(ok==0)
^